--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack",
-    "dev": "NODE_DEBUG=true webpack"
+    "dev": "NODE_DEBUG=true webpack",
+    "serve": "webpack-dev-server"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +15,7 @@
     "ts-loader": "^7.0.5",
     "typescript": "^3.9.3",
     "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11"
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.11.0"
   }
 }
